# sfml-cpp-game-programming

./: CMakeLists.txt  README.md  conanfile.txt
include/: Bob.h  Engine.h  HUD.h  LevelManager.h  Particle.h  ParticleSystem.h  PlayableCharacter.h  SoundManager.h  TextureHolder.h  Thomas.h
shaders/: rippleShader.frag
src/: Bob.cpp  DetectCollisions.cpp  Draw.cpp  Engine.cpp  HUD.cpp  Input.cpp  LevelManager.cpp  LoadLevel.cpp  Particle.cpp  ParticleSystem.cpp  PlayableCharacter.cpp  PopulateEmitters.cpp  SoundManager.cpp  TextureHolder.cpp  Thomas.cpp  Update.cpp  main.cpp
